# rust_wc

./: Cargo.toml  readme.md
src/: main.rs
