[package]
name = "wc_r"
version = "0.1.0"
authors = ["stuart"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.9.0"
rayon = "1.5.2"
itertools = "0.10.3"
clap = {version = "3.1.17", features = ["derive"]}
